# echo-notes

./: README.md  docker-compose.yml  start.sh  stop.sh
backend/: README.md  fly.toml  main.py  pyproject.toml  start.sh
backend/src/: main.py
backend/src/agents/: __init__.py
backend/src/core/: config.py  logging.py
backend/src/db/: database.py  models.py
backend/src/integrations/: __init__.py
backend/src/models/: __init__.py
backend/src/routers/: notes.py  summarize.py  transcribe.py
backend/src/schemas/: notes.py  transcription.py
backend/src/services/: summarization.py  transcription.py
backend/src/storage/: file_storage.py
backend/src/utils/: __init__.py
frontend/: package-lock.json  package.json  start.sh
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AudioVisualizer.tsx  CostDisplay.tsx  DeleteConfirmDialog.tsx  DynamicRecorder.tsx  EditNoteModal.tsx  NoteCard.tsx  NoteCardSkeleton.tsx  PlaybackBar.tsx  Recorder.tsx  RecordingQualityIndicator.tsx  SearchAndFilter.tsx  SettingsModal.tsx  TagSuggestions.tsx  Toast.tsx  VoiceSettings.tsx
frontend/src/components/ui/: card.tsx  slider.tsx
frontend/src/hooks/: useInfiniteScroll.ts  useKeyboardShortcuts.ts  useNotes.ts  usePreferences.ts  useRecorder.ts  useVoiceOutput.ts
frontend/src/lib/: audio.ts  costCalculator.ts  tagGenerator.ts  utils.ts
frontend/src/types/: index.ts
